[gd_scene load_steps=10 format=3 uid="uid://g0j1c6mj7at3"]

[ext_resource type="PackedScene" uid="uid://bpes7jjsdturr" path="res://static/shaders/blurry_backdrop.tscn" id="1_2gjvi"]
[ext_resource type="Script" path="res://apps/goal/scenes/goal_editor.gd" id="1_c37sa"]
[ext_resource type="Texture2D" uid="uid://chmks14rw50go" path="res://static/icons/shopping_cart_32x32.svg" id="2_yhh5l"]
[ext_resource type="Texture2D" uid="uid://7klvyxlktkjn" path="res://static/icons/backpack_32x32.svg" id="3_3uqqs"]
[ext_resource type="Texture2D" uid="uid://dbqmem4epqv8f" path="res://static/icons/give_heart_32x32.svg" id="4_43pw3"]
[ext_resource type="Texture2D" uid="uid://c0xjwq26v2od3" path="res://apps/painter/assets/icons/load_save.svg" id="5_v5jsb"]
[ext_resource type="Script" path="res://interface/components/toggle_switch.gd" id="5_vtdmr"]
[ext_resource type="Texture2D" uid="uid://o871cmutas55" path="res://apps/gallery/assets/icons/save.svg" id="6_hh3x3"]
[ext_resource type="Script" path="res://interface/components/checkbox_button.gd" id="6_okg1d"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c37sa")

[node name="Backdrop" parent="." instance=ExtResource("1_2gjvi")]

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(1146, 478)
popup_window = true
dialog_hide_on_ok = true
root_subfolder = "mods"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 72
theme_override_constants/margin_bottom = 72

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
offset_left = 24.0
offset_top = 83.0
offset_right = 1421.0
offset_bottom = 1708.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 24
columns = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/GridContainer"]
custom_minimum_size = Vector2(600, 0)
offset_right = 600.0
offset_bottom = 791.0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GridContainer/PanelContainer"]
offset_left = 24.0
offset_top = 36.0
offset_right = 576.0
offset_bottom = 755.0

[node name="Label" type="Label" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer"]
offset_right = 552.0
offset_bottom = 86.0
theme_type_variation = &"H1"
text = "New goal..."

[node name="HSeparator" type="HSeparator" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer"]
offset_top = 98.0
offset_right = 552.0
offset_bottom = 162.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer"]
offset_top = 174.0
offset_right = 552.0
offset_bottom = 472.0
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 24
columns = 2

[node name="Label3" type="Label" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer/GridContainer"]
offset_left = 87.0
offset_top = 18.0
offset_right = 148.0
offset_bottom = 69.0
size_flags_horizontal = 8
text = "Title"

[node name="TitleLineEdit" type="LineEdit" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
offset_left = 172.0
offset_right = 552.0
offset_bottom = 87.0
size_flags_horizontal = 3

[node name="Label4" type="Label" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer/GridContainer"]
offset_top = 129.0
offset_right = 148.0
offset_bottom = 180.0
size_flags_horizontal = 8
text = "Description"

[node name="DescriptionLineEdit" type="LineEdit" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
offset_left = 172.0
offset_top = 111.0
offset_right = 552.0
offset_bottom = 198.0
size_flags_horizontal = 3

[node name="Label5" type="Label" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer/GridContainer"]
offset_left = 59.0
offset_top = 234.0
offset_right = 148.0
offset_bottom = 285.0
size_flags_horizontal = 8
text = "Source"

[node name="SourceOptionButton" type="OptionButton" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
offset_left = 172.0
offset_top = 222.0
offset_right = 552.0
offset_bottom = 298.0
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer"]
offset_top = 484.0
offset_right = 552.0
offset_bottom = 544.0

[node name="Label" type="Label" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
offset_top = 4.0
offset_right = 240.0
offset_bottom = 55.0
text = "Use in-game clock"
vertical_alignment = 1

[node name="UseInGameClockToggle" type="Button" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
offset_left = 442.0
offset_right = 552.0
offset_bottom = 60.0
size_flags_horizontal = 10
theme_type_variation = &"ToggleSwitch"
toggle_mode = true
script = ExtResource("5_vtdmr")

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer"]
offset_top = 556.0
offset_right = 552.0
offset_bottom = 620.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer"]
offset_top = 632.0
offset_right = 552.0
offset_bottom = 719.0

[node name="OpenButton" type="Button" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_right = 216.0
offset_bottom = 87.0
size_flags_horizontal = 3
theme_type_variation = &"TagButton"
text = "Open...  "
icon = ExtResource("5_v5jsb")
expand_icon = true

[node name="SaveButton" type="Button" parent="MarginContainer/GridContainer/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 228.0
offset_right = 552.0
offset_bottom = 87.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
text = "Save..."
icon = ExtResource("6_hh3x3")
expand_icon = true

[node name="PanelContainer5" type="PanelContainer" parent="MarginContainer/GridContainer"]
offset_left = 624.0
offset_top = 317.0
offset_right = 1397.0
offset_bottom = 791.0
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GridContainer/PanelContainer5"]
offset_left = 24.0
offset_top = 36.0
offset_right = 749.0
offset_bottom = 438.0

[node name="Label4" type="Label" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer"]
offset_right = 156.0
offset_bottom = 69.0
size_flags_horizontal = 0
theme_type_variation = &"H3"
text = "Activation"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer"]
offset_top = 81.0
offset_right = 725.0
offset_bottom = 402.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer"]
offset_right = 725.0
offset_bottom = 321.0
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 12
columns = 2

[node name="ActivationOnDateCheckbox" type="Button" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
offset_top = 105.0
offset_right = 48.0
offset_bottom = 153.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"CheckBoxButton"
toggle_mode = true
script = ExtResource("6_okg1d")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer"]
offset_left = 72.0
offset_right = 725.0
offset_bottom = 258.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer/PanelContainer"]
offset_left = 24.0
offset_top = 36.0
offset_right = 629.0
offset_bottom = 222.0
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 2

[node name="Label" type="Label" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer/PanelContainer/GridContainer"]
offset_top = 18.0
offset_right = 38.0
offset_bottom = 69.0
text = "On"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer/PanelContainer/GridContainer"]
offset_left = 50.0
offset_right = 605.0
offset_bottom = 87.0

[node name="ActivationDateSpinBox" type="SpinBox" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
offset_right = 180.0
offset_bottom = 87.0
value = 1.0
rounded = true
allow_greater = true

[node name="ActivationMonthOptionButton" type="OptionButton" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
offset_left = 192.0
offset_right = 361.0
offset_bottom = 87.0
item_count = 12
selected = 0
popup/item_0/text = "Jan"
popup/item_0/id = 0
popup/item_1/text = "Feb"
popup/item_1/id = 1
popup/item_2/text = "Mar"
popup/item_2/id = 2
popup/item_3/text = "Apr"
popup/item_3/id = 3
popup/item_4/text = "May"
popup/item_4/id = 4
popup/item_5/text = "June"
popup/item_5/id = 5
popup/item_6/text = "July"
popup/item_6/id = 6
popup/item_7/text = "Aug"
popup/item_7/id = 7
popup/item_8/text = "Sept"
popup/item_8/id = 8
popup/item_9/text = "Oct"
popup/item_9/id = 9
popup/item_10/text = "Nov"
popup/item_10/id = 10
popup/item_11/text = "Dec"
popup/item_11/id = 11

[node name="ActivationSeasonOptionButton" type="OptionButton" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
offset_left = 381.0
offset_right = 595.0
offset_bottom = 87.0
item_count = 4
selected = 0
popup/item_0/text = "Spring"
popup/item_0/id = 0
popup/item_1/text = "Summer"
popup/item_1/id = 1
popup/item_2/text = "Fall"
popup/item_2/id = 2
popup/item_3/text = "Winter"
popup/item_3/id = 3

[node name="ActivationYearSpinBox" type="SpinBox" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
offset_left = 373.0
offset_right = 553.0
offset_bottom = 87.0
max_value = 10000.0
value = 2022.0
rounded = true
allow_greater = true

[node name="Label2" type="Label" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer/PanelContainer/GridContainer"]
offset_top = 117.0
offset_right = 38.0
offset_bottom = 168.0
text = "At"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer/PanelContainer/GridContainer"]
offset_left = 50.0
offset_top = 99.0
offset_right = 605.0
offset_bottom = 186.0

[node name="ActivationHourSpinBox" type="SpinBox" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
offset_right = 180.0
offset_bottom = 87.0
min_value = 1.0
max_value = 12.0
value = 11.0
rounded = true

[node name="Label3" type="Label" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer"]
offset_left = 192.0
offset_top = 18.0
offset_right = 199.0
offset_bottom = 69.0
text = ":"

[node name="ActivationMinuteSpinBox" type="SpinBox" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 211.0
offset_right = 391.0
offset_bottom = 87.0
max_value = 60.0
value = 59.0
rounded = true

[node name="ActivationAmPmOptionButton" type="OptionButton" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 403.0
offset_right = 555.0
offset_bottom = 87.0
item_count = 2
selected = 1
popup/item_0/text = "am"
popup/item_0/id = 1
popup/item_1/text = "pm"
popup/item_1/id = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer/PanelContainer"]
offset_left = 24.0
offset_top = 36.0
offset_right = 629.0
offset_bottom = 222.0

[node name="ActivationImmediateCheckbox" type="Button" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
offset_top = 271.0
offset_right = 48.0
offset_bottom = 319.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"CheckBoxButton"
toggle_mode = true
button_pressed = true
script = ExtResource("6_okg1d")

[node name="Label" type="Label" parent="MarginContainer/GridContainer/PanelContainer5/VBoxContainer/VBoxContainer/GridContainer"]
offset_left = 72.0
offset_top = 270.0
offset_right = 725.0
offset_bottom = 321.0
text = "Immediately"
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/GridContainer"]
offset_top = 815.0
offset_right = 600.0
offset_bottom = 1625.0
theme_override_constants/separation = 24

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/GridContainer/VBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
offset_left = 100.0
offset_right = 600.0
offset_bottom = 546.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer3"]
offset_left = 24.0
offset_top = 36.0
offset_right = 476.0
offset_bottom = 510.0

[node name="Label7" type="Label" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer3/VBoxContainer"]
offset_right = 452.0
offset_bottom = 69.0
theme_type_variation = &"H3"
text = "Objective"

[node name="ObjectiveOptionButton" type="OptionButton" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer3/VBoxContainer"]
unique_name_in_owner = true
offset_top = 81.0
offset_right = 452.0
offset_bottom = 163.0
item_count = 3
selected = 0
popup/item_0/text = "Sell items"
popup/item_0/icon = ExtResource("2_yhh5l")
popup/item_0/id = 0
popup/item_1/text = "Collect items"
popup/item_1/icon = ExtResource("3_3uqqs")
popup/item_1/id = 1
popup/item_2/text = "Give cuddles"
popup/item_2/icon = ExtResource("4_43pw3")
popup/item_2/id = 2

[node name="GridContainer2" type="GridContainer" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer3/VBoxContainer"]
offset_top = 175.0
offset_right = 452.0
offset_bottom = 474.0
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 24
columns = 2

[node name="Label" type="Label" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer3/VBoxContainer/GridContainer2"]
offset_left = 30.0
offset_top = 15.0
offset_right = 149.0
offset_bottom = 66.0
size_flags_horizontal = 8
text = "One item"
vertical_alignment = 1

[node name="ObjectiveItemIdButton" type="OptionButton" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer3/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
offset_left = 173.0
offset_right = 452.0
offset_bottom = 82.0
size_flags_horizontal = 3
item_count = 1
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0

[node name="Label3" type="Label" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer3/VBoxContainer/GridContainer2"]
offset_top = 108.0
offset_right = 149.0
offset_bottom = 186.0
size_flags_horizontal = 8
theme_override_constants/line_spacing = 0
text = "Any item in
category"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ObjectiveCategoryIdButton" type="OptionButton" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer3/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
offset_left = 173.0
offset_top = 106.0
offset_right = 452.0
offset_bottom = 188.0
size_flags_horizontal = 3
size_flags_vertical = 4
item_count = 1
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0

[node name="Label2" type="Label" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer3/VBoxContainer/GridContainer2"]
offset_left = 44.0
offset_top = 230.0
offset_right = 149.0
offset_bottom = 281.0
size_flags_horizontal = 8
text = "Amount"
vertical_alignment = 1

[node name="ObjectiveAmountSpinBox" type="SpinBox" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer3/VBoxContainer/GridContainer2"]
unique_name_in_owner = true
offset_left = 173.0
offset_top = 212.0
offset_right = 353.0
offset_bottom = 299.0
size_flags_horizontal = 0
value = 1.0
rounded = true

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/GridContainer/VBoxContainer2"]
offset_left = 208.0
offset_top = 570.0
offset_right = 600.0
offset_bottom = 810.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer2"]
offset_left = 24.0
offset_top = 36.0
offset_right = 368.0
offset_bottom = 204.0

[node name="Label6" type="Label" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer2/VBoxContainer"]
offset_right = 344.0
offset_bottom = 69.0
theme_type_variation = &"H3"
text = "Reward"

[node name="GridContainer3" type="GridContainer" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer2/VBoxContainer"]
offset_top = 81.0
offset_right = 344.0
offset_bottom = 168.0
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 24
columns = 2

[node name="Label" type="Label" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer2/VBoxContainer/GridContainer3"]
custom_minimum_size = Vector2(140, 0)
offset_top = 18.0
offset_right = 140.0
offset_bottom = 69.0
size_flags_horizontal = 8
text = "Fate"
horizontal_alignment = 2
vertical_alignment = 1

[node name="RewardAmountSpinBox" type="SpinBox" parent="MarginContainer/GridContainer/VBoxContainer2/PanelContainer2/VBoxContainer/GridContainer3"]
unique_name_in_owner = true
offset_left = 164.0
offset_right = 344.0
offset_bottom = 87.0
size_flags_horizontal = 0
max_value = 10000.0
value = 100.0
rounded = true
allow_greater = true

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/GridContainer"]
offset_left = 624.0
offset_top = 815.0
offset_right = 1397.0
offset_bottom = 1460.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GridContainer/PanelContainer4"]
offset_left = 24.0
offset_top = 36.0
offset_right = 749.0
offset_bottom = 609.0

[node name="Label4" type="Label" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer"]
offset_right = 157.0
offset_bottom = 69.0
size_flags_horizontal = 0
theme_type_variation = &"H3"
text = "Expiration"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer"]
offset_top = 81.0
offset_right = 725.0
offset_bottom = 573.0
theme_override_constants/h_separation = 24
theme_override_constants/v_separation = 12
columns = 2

[node name="ExpirationAfterCheckbox" type="Button" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer"]
unique_name_in_owner = true
offset_top = 55.0
offset_right = 48.0
offset_bottom = 103.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"CheckBoxButton"
toggle_mode = true
script = ExtResource("6_okg1d")

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer"]
offset_left = 72.0
offset_right = 725.0
offset_bottom = 159.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer2"]
offset_left = 24.0
offset_top = 36.0
offset_right = 629.0
offset_bottom = 123.0

[node name="Label" type="Label" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer2/HBoxContainer"]
offset_top = 19.0
offset_right = 62.0
offset_bottom = 68.0
theme_type_variation = &"Subtitle"
text = "After"
vertical_alignment = 1

[node name="ExpirationAfterAmountSpinBox" type="SpinBox" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
offset_left = 74.0
offset_right = 254.0
offset_bottom = 87.0
max_value = 1000.0
value = 1.0
rounded = true
allow_greater = true

[node name="ExpirationAfterIncrementOptionButton" type="OptionButton" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
offset_left = 266.0
offset_right = 472.0
offset_bottom = 87.0
item_count = 6
selected = 2
popup/item_0/text = "Minutes"
popup/item_0/id = 0
popup/item_1/text = "Hours"
popup/item_1/id = 1
popup/item_2/text = "Days"
popup/item_2/id = 2
popup/item_3/text = "Weeks"
popup/item_3/id = 3
popup/item_4/text = "Months"
popup/item_4/id = 4
popup/item_5/text = "Years"
popup/item_5/id = 6

[node name="ExpirationOnDateCheckbox" type="Button" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer"]
unique_name_in_owner = true
offset_top = 276.0
offset_right = 48.0
offset_bottom = 324.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"CheckBoxButton"
toggle_mode = true
script = ExtResource("6_okg1d")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer"]
offset_left = 72.0
offset_top = 171.0
offset_right = 725.0
offset_bottom = 429.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer"]
offset_left = 24.0
offset_top = 36.0
offset_right = 629.0
offset_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 2

[node name="Label" type="Label" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer/GridContainer"]
offset_top = 18.0
offset_right = 38.0
offset_bottom = 69.0
text = "On"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer/GridContainer"]
offset_left = 50.0
offset_right = 605.0
offset_bottom = 87.0

[node name="ExpirationDateSpinBox" type="SpinBox" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
offset_right = 180.0
offset_bottom = 87.0
value = 1.0
rounded = true
allow_greater = true

[node name="ExpirationSeasonOptionButton" type="OptionButton" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
visible = false
offset_left = 196.0
offset_right = 410.0
offset_bottom = 87.0
item_count = 4
selected = 0
popup/item_0/text = "Spring"
popup/item_0/id = 0
popup/item_1/text = "Summer"
popup/item_1/id = 1
popup/item_2/text = "Fall"
popup/item_2/id = 2
popup/item_3/text = "Winter"
popup/item_3/id = 3

[node name="ExpirationMonthOptionButton" type="OptionButton" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
offset_left = 192.0
offset_right = 361.0
offset_bottom = 87.0
item_count = 12
selected = 0
popup/item_0/text = "Jan"
popup/item_0/id = 0
popup/item_1/text = "Feb"
popup/item_1/id = 1
popup/item_2/text = "Mar"
popup/item_2/id = 2
popup/item_3/text = "Apr"
popup/item_3/id = 3
popup/item_4/text = "May"
popup/item_4/id = 4
popup/item_5/text = "June"
popup/item_5/id = 5
popup/item_6/text = "July"
popup/item_6/id = 6
popup/item_7/text = "Aug"
popup/item_7/id = 7
popup/item_8/text = "Sept"
popup/item_8/id = 8
popup/item_9/text = "Oct"
popup/item_9/id = 9
popup/item_10/text = "Nov"
popup/item_10/id = 10
popup/item_11/text = "Dec"
popup/item_11/id = 11

[node name="ExpirationYearSpinBox" type="SpinBox" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer2"]
unique_name_in_owner = true
offset_left = 373.0
offset_right = 553.0
offset_bottom = 87.0
max_value = 10000.0
value = 2022.0
rounded = true
allow_greater = true

[node name="Label2" type="Label" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer/GridContainer"]
offset_top = 117.0
offset_right = 38.0
offset_bottom = 168.0
text = "At"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer/GridContainer"]
offset_left = 50.0
offset_top = 99.0
offset_right = 605.0
offset_bottom = 186.0

[node name="ExpirationHourSpinBox" type="SpinBox" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
offset_right = 180.0
offset_bottom = 87.0
min_value = 1.0
max_value = 12.0
value = 11.0
rounded = true

[node name="Label3" type="Label" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer"]
offset_left = 192.0
offset_top = 18.0
offset_right = 199.0
offset_bottom = 69.0
text = ":"

[node name="ExpirationMinuteSpinBox" type="SpinBox" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 211.0
offset_right = 391.0
offset_bottom = 87.0
max_value = 60.0
value = 59.0
rounded = true

[node name="ExpirationAmPmOptionButton" type="OptionButton" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer/PanelContainer/GridContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 403.0
offset_right = 555.0
offset_bottom = 87.0
item_count = 2
selected = 0
popup/item_0/text = "pm"
popup/item_0/id = 0
popup/item_1/text = "am"
popup/item_1/id = 1

[node name="ExpirationNeverCheckbox" type="Button" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer"]
unique_name_in_owner = true
offset_top = 442.0
offset_right = 48.0
offset_bottom = 490.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"CheckBoxButton"
toggle_mode = true
button_pressed = true
script = ExtResource("6_okg1d")

[node name="Label" type="Label" parent="MarginContainer/GridContainer/PanelContainer4/VBoxContainer/GridContainer"]
offset_left = 72.0
offset_top = 441.0
offset_right = 725.0
offset_bottom = 492.0
text = "Never"
vertical_alignment = 1
